migrated vscode settings

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,8 @@
 {
-  "recommendations": [
-    "dbaeumer.vscode-eslint",
-    "formulahendry.auto-rename-tag",
-    "graphql.vscode-graphql",
-    "jpoissonnier.vscode-styled-components"
-  ]
+    "recommendations": [
+        "dbaeumer.vscode-eslint",
+        "formulahendry.auto-rename-tag",
+        "apollographql.vscode-apollo",
+        "jpoissonnier.vscode-styled-components"
+    ]
 }
